[package]
name = "flatgeobuf-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
flatgeobuf = { git = "https://github.com/marucjmar/flatgeobuf-wasm" }
geozero = "0.15.1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
cargo-watch = "8.5.3"

[lib]
crate-type = ["cdylib"]
